syntax = "proto3";
option csharp_namespace = "Basket.API.Protos";
package BasketApi;
import "google/protobuf/timestamp.proto";

service Basket {
  rpc GetBasket(GetBasketRequest) returns (GetBasketReply);
  rpc UpdateBasket(UpdateBasketRequest) returns (UpdateBasketReply);
  rpc CreateCheckout(CreateCheckoutRequest) returns (CreateCheckoutReply);
}

message GetBasketRequest {
  string buyer_id = 1;
}

message GetBasketReply {
  repeated BasketItem basket_items = 1;
}

message UpdateBasketRequest {
  string buyer_id = 1;
  repeated BasketItem basket_items = 2;
}

message UpdateBasketReply {
}

message CreateCheckoutRequest {
  string buyer_id = 1;
  string request_id = 2;
  Address address = 3;
  Card card = 4;
}

message CreateCheckoutReply {
}

message BasketItem {
  string id = 1;
  string product_id = 2;
  string product_name = 3;
  double unit_price = 4;
  double old_unit_price = 5;
  int32 units = 6;
}

message Address {
  string city = 1;
  string street = 2;
  string state = 3;
  string country = 4;
  string zip_code = 5;
}

message Card {
  string number = 1;
  string holder_name = 2;
  google.protobuf.Timestamp expiration = 3;
  string security_number = 4;
}